tests/errors/tc_expr_syscall_noargs.lx
@module "main"

pub const main -> fn () int {
    __syscall__();
    return 0;
}
